fix: ensure some slides are not visible on print (meanwhile we remove them, reveal add them elsewhere...)

--- a/src/scss/theme/print.scss
+++ b/src/scss/theme/print.scss
@@ -3,6 +3,12 @@
 */
 html.print-pdf {
     .reveal .slides .pdf-page {
+        &:has([data-slide-to-remove]) {
+            // hack to ensure some slides were not visible
+            // - some extras slides added when using multiples cols meanwhile we removed it 🙈
+            display: none !important;
+        }
+
         div.slide-background.quote-slide::before {
             content: '';
             position: absolute;
